--- a/src/main/resources/fxml/GraphList/GraphListUI.fxml
+++ b/src/main/resources/fxml/GraphList/GraphListUI.fxml
@@ -8,26 +8,32 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<fx:root fx:id="graphListPane" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="280.0" stylesheets="@../../css/GraphList/GraphList.css" type="GridPane" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
-  <columnConstraints>
-    <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="250.0" />
-    <ColumnConstraints hgrow="ALWAYS" maxWidth="-Infinity" minWidth="35.0" prefWidth="10.0" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
-  </rowConstraints>
-   <children>
-      <VBox prefHeight="200.0" prefWidth="100.0">
-         <children>
-            <VBox fx:id="graphListBox" />
-            <MenuButton fx:id="addNewBtn" alignment="CENTER" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="transparent-button" text="+">
-              <items>
-                <MenuItem mnemonicParsing="false" onAction="#requestAddingGraphData" text="Graph" />
-                <MenuItem mnemonicParsing="false" text="Table" />
-              </items>
-            </MenuButton>
-         </children>
-      </VBox>
-      <Button fx:id="openButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="transparent-button" text="&lt;&lt;" GridPane.columnIndex="1" />
-   </children>
+<fx:root fx:id="graphListPane" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity"
+         minWidth="-Infinity" prefHeight="400.0" prefWidth="280.0" stylesheets="@../../css/GraphList/GraphList.css"
+         type="GridPane" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
+         >
+    <columnConstraints>
+        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="250.0"/>
+        <ColumnConstraints hgrow="ALWAYS" maxWidth="-Infinity" minWidth="35.0" prefWidth="10.0"/>
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS"/>
+    </rowConstraints>
+    <children>
+        <VBox prefHeight="200.0" prefWidth="100.0">
+            <children>
+                <VBox fx:id="graphListBox"/>
+                <MenuButton fx:id="addNewBtn" alignment="CENTER" contentDisplay="CENTER"
+                            maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="transparent-button"
+                            text="+">
+                    <items>
+                        <MenuItem mnemonicParsing="false" onAction="#requestAddingGraphData" text="Graph"/>
+                        <MenuItem mnemonicParsing="false" text="Table"/>
+                    </items>
+                </MenuButton>
+            </children>
+        </VBox>
+        <Button fx:id="openButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+                mnemonicParsing="false" styleClass="transparent-button" text="&lt;&lt;" GridPane.columnIndex="1"/>
+    </children>
 </fx:root>
