--- a/src/main/resources/css/GraphList/GraphList.css
+++ b/src/main/resources/css/GraphList/GraphList.css
@@ -19,3 +19,15 @@
 #graphListPane .text-field {
     -fx-pref-height: 40px;
 }
+
+.graph-block {
+    -fx-background-color: #f0f0f0;
+
+    -fx-border-width: 1px;
+    -fx-border-color: #cccccc;
+}
+
+.graph-block.selected {
+    -fx-background-color: #ffcc00;
+    -fx-border-color: #ff0000;
+}
