--- a/src/main/resources/css/GraphList/GraphList.css
+++ b/src/main/resources/css/GraphList/GraphList.css
@@ -1,21 +1,46 @@
 #graphListPane {
     -fx-background-color: white;
-    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.5), 10, 0, 0, 10);
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.5), 5, 0, 0, 5);
 }
 
-.transparent-button {
-    -fx-background-color: transparent;
+.add-button {
+    -fx-background-color: white;
+    -fx-border-color: lightgray;
+    -fx-border-radius: 3;
 }
 
-.transparent-button:hover {
+.add-button: hover {
     /* Hover state */
-    -fx-background-color: #d0d0d0;
+    -fx-background-color: #E6E6E6;
 }
 
-.transparent-button:pressed {
+.add-button: pressed {
     /* Clicked/pressed state */
-    -fx-background-color: #b0b0b0;
+    -fx-background-color: #DFDFDF;
 }
+.menu-button{
+    -fx-border-color: transparent;
+    -fx-background-color: white;
+}
+.detail-button{
+    -fx-background-color: #f2f2f2;
+    -fx-border-width: 0;
+    -fx-background-radius: 2;
+}
+.detail-button: hover {
+    -fx-background-color: #e2e2e2;
+    -fx-background-radius: 5;
+}
+.detail-button: click {
+    -fx-background-color: #d2d2d2;
+    -fx-background-radius: 5;
+}
+.detail-surface{
+    -fx-background-color: #b0b0b0;
+    -fx-background-radius: 5;
+}
+
+
 #graphListPane .text-field {
     -fx-pref-height: 40px;
 }
