--- a/src/main/resources/fxml/GraphCanvas/GraphCanvasUI.fxml
+++ b/src/main/resources/fxml/GraphCanvas/GraphCanvasUI.fxml
@@ -11,6 +11,8 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -20,13 +22,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<?import org.kordamp.ikonli.javafx.FontIcon?>
-<fx:root
-		fx:id="mainUIScreen"
-		maxHeight="Infinity" maxWidth="Infinity" minHeight="-Infinity" minWidth="0.0" prefWidth="600.0"
-		type="AnchorPane" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root fx:id="mainUIScreen" maxHeight="Infinity" maxWidth="Infinity" minHeight="-Infinity" minWidth="0.0" prefWidth="600.0" styleClass="background" stylesheets="@../../css/GraphCanvas/main.css" type="AnchorPane" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
 
-	<GridPane fx:id="debugUI" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" >
+	<GridPane fx:id="debugUI" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" style="visibility: false;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
 		<columnConstraints>
 			<ColumnConstraints minWidth="10.0" prefWidth="170.0" />
 			<ColumnConstraints minWidth="10.0" prefWidth="100.0" />
@@ -69,32 +67,56 @@
 		<children>
 			<Button minHeight="40.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#toggleSettingUI" prefHeight="40.0" prefWidth="40.0" style="-fx-background-radius: 5; -fx-border-radius: 5;">
 				<graphic>
-					<FontIcon iconLiteral="fa-cog" iconSize="24" />
 				</graphic>
 				<VBox.margin>
 					<Insets bottom="7.0" />
 				</VBox.margin>
+            <graphic>
+               <ImageView fitHeight="26.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@../../images/gear.png" />
+                  </image>
+               </ImageView>
+            </graphic>
 			</Button>
 			<Button minWidth="-Infinity" mnemonicParsing="false" onAction="#zoomInCanvas_AtMiddle" prefHeight="40.0" prefWidth="40.0" style="-fx-background-radius: 5; -fx-border-radius: 5;">
 				<graphic>
-					<FontIcon iconLiteral="fa-search-plus" iconSize="24" />
 				</graphic>
+            <graphic>
+               <ImageView fitHeight="26.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@../../images/zoom%20in.png" />
+                  </image>
+               </ImageView>
+            </graphic>
 			</Button>
 			<Button minWidth="-Infinity" mnemonicParsing="false" onAction="#zoomOutCanvas_AtMiddle" prefHeight="40.0" prefWidth="40.0" style="-fx-background-radius: 5; -fx-border-radius: 5;">
 				<graphic>
-					<FontIcon iconLiteral="fa-search-minus" iconSize="24" />
 				</graphic>
 				<VBox.margin>
 					<Insets top="7.0" />
 				</VBox.margin>
+            <graphic>
+               <ImageView fitHeight="26.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@../../images/zoom%20out.png" />
+                  </image>
+               </ImageView>
+            </graphic>
 			</Button>
 			<Button minWidth="-Infinity" mnemonicParsing="false" onAction="#goHome" prefHeight="40.0" prefWidth="40.0" style="-fx-background-radius: 5; -fx-border-radius: 5;">
 				<graphic>
-					<FontIcon iconLiteral="fa-home" iconSize="24" />
 				</graphic>
 				<VBox.margin>
 					<Insets top="7.0" />
 				</VBox.margin>
+            <graphic>
+               <ImageView fitHeight="26.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@../../images/home.png" />
+                  </image>
+               </ImageView>
+            </graphic>
 
 			</Button>
 		</children>
