--- a/src/main/resources/fxml/GraphList/GraphListUI.fxml
+++ b/src/main/resources/fxml/GraphList/GraphListUI.fxml
@@ -1,39 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<fx:root fx:id="graphListPane" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity"
-         minWidth="-Infinity" prefHeight="400.0" prefWidth="280.0" stylesheets="@../../css/GraphList/GraphList.css"
-         type="GridPane" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
-         >
+<fx:root fx:id="graphListPane" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="300.0" stylesheets="@../../css/GraphList/GraphList.css" type="GridPane" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
-        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="250.0"/>
-        <ColumnConstraints hgrow="ALWAYS" maxWidth="-Infinity" minWidth="35.0" prefWidth="10.0"/>
+        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="250.0" />
+        <ColumnConstraints hgrow="NEVER" maxWidth="-Infinity" />
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS"/>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
     </rowConstraints>
     <children>
         <VBox prefHeight="200.0" prefWidth="100.0">
             <children>
-                <VBox fx:id="graphListBox"/>
-                <MenuButton fx:id="addNewBtn" alignment="CENTER" contentDisplay="CENTER"
-                            maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="transparent-button"
-                            text="+">
-                    <items>
-                        <MenuItem mnemonicParsing="false" onAction="#requestAddingGraphData" text="Graph"/>
-                        <MenuItem mnemonicParsing="false" text="Table"/>
-                    </items>
-                </MenuButton>
+                <VBox fx:id="graphListBox" spacing="7.0" />
+            <Button fx:id="addNewBtn" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#requestAddingGraphData" styleClass="add-button">
+               <graphic>
+                  <ImageView fitHeight="24.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../images/plus.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <VBox.margin>
+                  <Insets top="7.0" />
+               </VBox.margin>
+               <padding>
+                  <Insets bottom="10.0" top="10.0" />
+               </padding>
+            </Button>
             </children>
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding>
         </VBox>
-        <Button fx:id="openButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                mnemonicParsing="false" styleClass="transparent-button" text="&lt;&lt;" GridPane.columnIndex="1"/>
+      <Button fx:id="openButton" maxHeight="1000.0" maxWidth="20.0" minWidth="20.0" mnemonicParsing="false" styleClass="detail-button" GridPane.columnIndex="1">
+         <graphic>
+            <Pane maxHeight="200.0" maxWidth="5.0" minHeight="200.0" minWidth="5.0" prefHeight="40.0" prefWidth="5.0" styleClass="detail-surface" />
+         </graphic>
+      </Button>
     </children>
 </fx:root>
