--- a/src/main/resources/fxml/TopNavBar/TopNavBarUI.fxml
+++ b/src/main/resources/fxml/TopNavBar/TopNavBarUI.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -10,26 +11,16 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<?import org.kordamp.ikonli.javafx.FontIcon?>
-<?import java.lang.String?>
-<fx:root
-        id="root"
-        minHeight="50.0" minWidth="600.0"
-        stylesheets="@../../css/TopNavBar/TopNavBar.css"
-        type="BorderPane" xmlns="http://javafx.com/javafx/21"
-        xmlns:fx="http://javafx.com/fxml/1"
->
+<fx:root id="root" minHeight="50.0" minWidth="600.0" styleClass="background" stylesheets="@../../css/TopNavBar/TopNavBar.css" type="BorderPane" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
 	<center>
         <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="5" BorderPane.alignment="CENTER">
             <children>
                 <ImageView fx:id="logoImage" fitHeight="48.0" fitWidth="48.0" preserveRatio="true">
                     <image>
-                        <Image url="@../../Logo.png" />
+                        <Image url="@../../images/Logo.png" />
                     </image></ImageView>
-                <Label text="Do an Java">
-               <font>
-                  <Font size="19.0" />
-               </font></Label>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="product-name" text="Nhóm 27 - SE330.O21" />
+                <Label />
             </children>
         </HBox>
     </center>
@@ -38,13 +29,22 @@
             <children>
                 <Button fx:id="openFilePanelButton" mnemonicParsing="false">
                     <graphic>
-                        <FontIcon iconLiteral="anto-bars" iconSize="32"/>
                     </graphic>
                     <styleClass>
                         <String fx:value="icon-button" />
                     </styleClass>
+               <graphic>
+                  <ImageView fitHeight="28.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../images/menu.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
                 </Button>
-                <Text fx:id="fileNameText" strokeType="OUTSIDE" strokeWidth="0.0" text="Untitled Graph">
+                <Text fx:id="fileNameText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="file-name" text="Untitled Graph">
                     <font>
                         <Font name="Arial" size="24.0" />
                     </font>
@@ -63,24 +63,36 @@
          <children>
              <Button fx:id="openLanguageButton" mnemonicParsing="false">
                  <graphic>
-                     <FontIcon iconLiteral="anto-question-circle" iconSize="32"/>
                  </graphic>
                  <styleClass>
                      <String fx:value="icon-button" />
                  </styleClass>
+               <graphic>
+                  <ImageView fitHeight="28.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../images/question.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
              </Button>
              <Button fx:id="openCoopButton" mnemonicParsing="false">
                  <graphic>
-                     <FontIcon iconLiteral="bi-code-slash" iconSize="32"/>
                  </graphic>
                  <styleClass>
                      <String fx:value="icon-button" />
                  </styleClass>
+               <graphic>
+                  <ImageView fitHeight="28.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../images/code.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
              </Button>
          </children>
       </HBox>
    </right>
     <padding>
-        <Insets topRightBottomLeft="10.0" />
+        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
     </padding>
 </fx:root>
